# world_pop_fx_pipeline

./: .gitignore  README.md  main.py  pyproject.toml
src/population_pipeline/: app.py  cli.py  config.py
src/population_pipeline/clients/: fx.py  world_bank.py
src/population_pipeline/models/: population.py
src/population_pipeline/pipeline/: module_a.py  module_b.py  orchestrator.py
src/population_pipeline/utils/: currency.py  http.py  logger.py
