[project]
name = "world-pop-fx-pipeline"
version = "0.1.0"
description = "Small ETL that joins World Bank population with FX rates to MXN"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pycountry>=24.6.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "typer[all]>=0.15.4",
]

[project.scripts]
population-pipeline = "population_pipeline.cli:app"

